[workspace]
resolver = "2"
members = [
    "crates/scanengine-types",
    "crates/scanengine-resilience",
    "crates/scanengine-core",
    "crates/scanengine-infra",
    "crates/scanengine-api",
    "crates/scanengine-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/ABHIJEET-MUNESHWAR/ScanEngine"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
governor = "0.6"
dashmap = "6"
parking_lot = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hdrhistogram = "7"
mockall = "0.13"
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

scanengine-types = { path = "crates/scanengine-types" }
scanengine-resilience = { path = "crates/scanengine-resilience" }
scanengine-core = { path = "crates/scanengine-core" }
scanengine-infra = { path = "crates/scanengine-infra" }
scanengine-api = { path = "crates/scanengine-api" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
strip = false
