[package]
name = "scanengine-api"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
scanengine-types = { workspace = true }
scanengine-core = { workspace = true }
scanengine-infra = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
