[package]
name = "scanengine-node"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "scanengine-node"

[[bin]]
name = "scanengine-node"
path = "src/main.rs"

[dependencies]
scanengine-types = { workspace = true }
scanengine-core = { workspace = true }
scanengine-infra = { workspace = true }
scanengine-api = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
hdrhistogram = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "evaluate"
harness = false

[lints.rust]
unsafe_code = "forbid"
